[package]
name = "lightstreamer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
reqwest = { version = "0.11.20", features = ["json", "stream"] }
serde_urlencoded = "0.7.1"
url = "2.4.1"
bytes = "1.4.0"
tokio-tungstenite = "0.20.0"
http = "0.2.9"
futures = "0.3.28"
async-trait = "0.1.73"

[dev-dependencies]
tracing-test = "0.2.4"
